--- a/frontapi/src/components/chat/chat.css
+++ b/frontapi/src/components/chat/chat.css
@@ -249,6 +249,9 @@
 /* Message 1220px */
 @media only screen and ( min-width: 1220px )
 {
+	#chat-section
+	{ margin-top: 60px;}
+
 	#chat-users {
 		position: static;
 
