Create a 'edit info' menu
Create a menu pop up where you can change pseudo and avatar add tfa
on/off.
Psuedo change is link to the back, avatar and tfa are not.

--- a/frontapi/src/components/user/useredit.css
+++ b/frontapi/src/components/user/useredit.css
@@ -58,10 +58,20 @@
 #useredit-input {
 	margin:0.4em;
 	width:calc(100% - 0.8em);
+	height:100%;
 	padding:0;
+	display:flex;
+	flex-direction: column;
+	justify-content:space-between;
 }
 
 #useredit-input-pseudo {
+	margin:0;
+	width:calc(100% - 1em);
+
+}
+
+#useredit-input-avatar {
 	margin:0;
 	width:calc(100% - 1em);
 }
