--- a/frontapi/src/components/user/user.css
+++ b/frontapi/src/components/user/user.css
@@ -78,6 +78,7 @@
 
 #user-matchhistory {
 	margin: 5%;
+	margin-top: 0;
 	display:flex;
 	flex-direction:column;
 	overflow-y: scroll;
@@ -143,7 +144,6 @@
 	}
 
 	#user-matchhistory {
-		margin: 5%;
 		height: 70%;
 		width:67%;
 	}
