--- a/frontapi/src/components/user/useredit.css
+++ b/frontapi/src/components/user/useredit.css
@@ -75,3 +75,9 @@
 	margin:0;
 	width:calc(100% - 1em);
 }
+
+#useredit-input-toggle-label {
+	font-size:0.8em;
+	margin-right: 1em;
+	margin-left: 1em;
+}
