--- a/frontapi/src/components/game/game.css
+++ b/frontapi/src/components/game/game.css
@@ -129,6 +129,27 @@
 	color: var( --cNeonDark );
 }
 
+#game-end-screen {
+	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
+	font-size: 2rem;	
+
+	color: var( --cNeon );
+	background-color: rgba(0,0,0,0.2);
+	backdrop-filter: blur(0.3em);
+
+	border-right: 1px solid var( --cNeon );
+	position: fixed;
+	top:0;
+	left:0;
+
+	width:100%;
+	height:100%;
+
+	text-align:center;
+	padding-top: 45%;
+
+}
+
 @media only screen and ( min-width: 1220px )
 {
 	#gameSection {
