--- a/frontapi/src/components/game/game.css
+++ b/frontapi/src/components/game/game.css
@@ -80,11 +80,12 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width:40%;
+	width:30%;
 }
 
-#btnCtrl Button {
+#game-button-start {
 	margin: 0.3em;
+	width:100%;
 }
 
 #obs {
@@ -96,6 +97,7 @@
 	flex-direction: row;
 	justify-content: center;
 	background-color: var(--cNeonDark);
+	width:100%;
 }
 
 #obsButton {
