--- a/frontapi/src/components/game/gameinvite.css
+++ b/frontapi/src/components/game/gameinvite.css
@@ -30,7 +30,15 @@
 	display:flex;
 	flex-direction: column;
 	justify-content:space-between;
+}
 
+#gameinvite-title {
+	color:var(--cNeon);
+	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
+	font-size:1em;
+	text-align:center;
+	padding:0.3em;
+	font-weight:650;
 }
 
 #gameinvite-button Button{
@@ -61,10 +69,14 @@
 	margin:0.2em;
 }
 
+
 .gameinvite-input-toggle-label {
+	display:inline-block;
 	color:var(--cNeon);
 	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
 	font-size:0.8em;
 	margin-right: 1em;
 	margin-left: 1em;
+	width:15em;
+	font-weight:550;
 }
