--- a/frontapi/src/components/chat/chat.css
+++ b/frontapi/src/components/chat/chat.css
@@ -245,6 +245,12 @@
 	color: var( --cBackground );
 	background-color: var(--cNeon80);
 }
+	
+.menu-friends
+{
+    right: 0;
+    margin-top: -1em;
+}
 
 /* Message 1220px */
 @media only screen and ( min-width: 1220px )
