--- a/frontapi/src/components/leaderboard/leaderboard.css
+++ b/frontapi/src/components/leaderboard/leaderboard.css
@@ -79,6 +79,12 @@
 	width:33.3333%;
 }
 
+.menu-leaderboard
+{
+	left: 55%;
+	margin-top: -1.5em;
+}
+
 @media only screen and ( min-width: 1220px )
 {
 	#leaderboard-section {
