--- a/frontapi/src/components/user/user.css
+++ b/frontapi/src/components/user/user.css
@@ -77,8 +77,8 @@
 }
 
 #user-matchhistory {
-	margin: 5%;
-	margin-top: 0;
+/*	margin: 5%;
+	margin-top: 0;*/
 	display:flex;
 	flex-direction:column;
 	overflow-y: scroll;
@@ -94,6 +94,7 @@
 	align-self:center;
 
 	margin-bottom: 1em;
+	margin-top: 2em;
 }
 
 .user-list {
@@ -115,10 +116,108 @@
 
 }
 
+#match-history
+{
+	width: 100%;
+}
+
+#match-history th
+{
+	color: var( --cNeonLight );
+	padding-bottom: 1em;
+	font-size: 1.5em;
+	font-weight: 450;
+}
+
+#match-history td
+{
+	border-top: 1px solid rgba( 89, 168, 15, 0.3 );
+	color: var( --cNeon );
+	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
+	font-size: 1rem;
+	font-weight: 350;
+	line-height: 2;
+}
+
+#match-history td:nth-child(1)
+{
+	width: 40vw;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+#match-history .pseudovs
+{
+	height: 2.1em;
+	white-space: nowrap;
+	overflow: hidden;
+	margin-right: 0.5em;
+}
+
+#match-history .pseudo-match
+{
+	display: inline-block;
+}
+
+#match-history .stats
+{
+	width: 11em;
+	height: 2.1em;
+	white-space: nowrap;
+	overflow: visible;
+}
+
+#match-history .victories
+{
+	color: var( --cNeonLight );
+}
+
+#match-history .defeats
+{
+	color: rgba( 255, 0, 0, 0.7 );
+}
+
+#match-history td:nth-child(2)
+{
+	width: 15vw;
+	height: 2.1em;
+	padding-left: 1em;
+	padding-right: 1em;
+	white-space: nowrap;
+	overflow: hidden;
+	text-align: center;
+}
+
+#match-history .won
+{
+	color: var( --cNeonLight );
+}
+
+#match-history .lost
+{
+	color: rgba( 255, 0, 0, 0.7 );
+}
+
+#match-history td:nth-child(3)
+{
+	width: 25vw;
+	height: 2.1em;
+	white-space: nowrap;
+	overflow: hidden;
+	text-align: center;
+}
+
+.menu-match
+{
+	margin-left: 5em;
+	margin-top: -1em;
+}
 
 @media only screen and ( min-width: 1220px ) {
 	#user-section {
 		flex-direction:row;
+		justify-content: space-between;
 		height:60%;
 	}
 
@@ -145,7 +244,12 @@
 
 	#user-matchhistory {
 		height: 70%;
-		width:67%;
+		width:72%;
+	}
+
+	#match-history td:nth-child(1)
+	{
+		width: 30vw;
 	}
 
 }
