--- a/frontapi/src/components/user/user.css
+++ b/frontapi/src/components/user/user.css
@@ -247,10 +247,14 @@
 	}
 
 	#user-matchhistory {
-		height: 70%;
+/*		height: 70%;*/
 		width:72%;
-	}
 
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	
 	#match-history td:nth-child(1)
 	{
 		width: 30vw;
