match history responsiveness

--- a/frontapi/src/components/user/qr_code.css
+++ b/frontapi/src/components/user/qr_code.css
@@ -2,13 +2,13 @@
 
 #qr-parent
 {
-	width: 100%;
+/*	width: 100%;
 	margin-top: 1em;
 
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
-
+*/
 }
 
 #qr svg
@@ -26,7 +26,8 @@
 {
 	position: absolute;
 	margin-top: 0;
-	margin-left: -17em;
+	right: 40px;
+/*	margin-left: -17em;*/
 }
 
 @media only screen and ( min-width: 1220px )
@@ -34,9 +35,6 @@
 	#qr-parent
 	{ flex-direction: column; padding-bottom: 10em; }
 
-	#qr svg
-	{ margin-left: 1em; margin-right: 1em; }
-
 	#qr img
-	{ margin-top: 0; margin-left: -18em; }
+	{ right: 0; left: 18.5em; }
 }
