--- a/frontapi/src/components/user/user.css
+++ b/frontapi/src/components/user/user.css
@@ -17,8 +17,6 @@
 	color: var(--cNeon);
 	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
 	font-weight: 350;
-
-
 }
 
 #user-id {
@@ -38,7 +36,6 @@
 	border-radius: 10em;
 
 	align-self:flex-start;
-
 }
 
 #user-id-info {
@@ -62,7 +59,6 @@
 	line-height: 1.7;
 
 	color: var(--cNeonLight);
-
 }
 
 #user-id-pseudo :not(.menu-match) {
@@ -73,7 +69,14 @@
 #user-id-elo {
 	font-size: 0.8em;
 	color: var(--cNeonDark);
-	margin-bottom:1em;
+	margin-bottom: 1em;
+	height: 30px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+
 }
 
 #user-matchhistory {
@@ -107,10 +110,10 @@
 	overflow-y:scroll;
 */
 
-	align-self: flex-start;
+/*	align-self: flex-start;*/
 
-	width:100%;
-	height:100%;
+/*	width:100%;
+	height:100%;*/
 
 	font-family: SkwarLetter;
 	line-height: 1.7;
@@ -222,7 +225,7 @@
 	#user-section {
 		flex-direction:row;
 		justify-content: space-between;
-		height:60%;
+/*		height:60%;*/
 	}
 
 	#user-id {
@@ -250,9 +253,9 @@
 /*		height: 70%;*/
 		width:72%;
 
-		display: flex;
+/*		display: flex;
 		flex-direction: column;
-		align-items: flex-start;
+		justify-content: end;*/
 	}
 	
 	#match-history td:nth-child(1)
