--- a/frontapi/src/components/utils/button.css
+++ b/frontapi/src/components/utils/button.css
@@ -10,7 +10,8 @@
 	cursor: pointer;
 
 	border: 1px solid var(--cNeon);
-	padding: 0.5em;
+	padding: 0.5rem;
+	font-size:1rem;
 	font-weight:550;
 }
 
