--- a/frontapi/src/components/utils/toggleswitch.css
+++ b/frontapi/src/components/utils/toggleswitch.css
@@ -3,8 +3,8 @@
 .generic-toggleswitch {
   position: relative;
   display: inline-block;
-  width: 2.50em;
-  height: 1.5em;
+  width: 2.50rem;
+  height: 1.5rem;
 }
 
 .generic-toggleswitch input { 
@@ -24,16 +24,16 @@
   border: 1px solid var(--cNeon80);
   -webkit-transition: .4s;
   transition: .4s;
-  border-radius: 1em;
+  border-radius: 1rem;
 }
 
 .generic-toggleswitch-slider:before {
   position: absolute;
   content: "";
-  height: 1em;
-  width: 1em;
-  left: 0.20em;
-  bottom: 0.20em;
+  height: 1rem;
+  width: 1rem;
+  left: 0.20rem;
+  bottom: 0.20rem;
   background-color: var(--cNeon);
   -webkit-transition: .4s;
   transition: .4s;
@@ -45,8 +45,8 @@ input:checked + .generic-toggleswitch-slider {
 }
 
 input:checked + .generic-toggleswitch-slider:before {
-  -webkit-transform: translateX(1em);
-  -ms-transform: translateX(1em);
-  transform: translateX(1em);
+  -webkit-transform: translateX(1rem);
+  -ms-transform: translateX(1rem);
+  transform: translateX(1rem);
   background-color: var(--cBackground);
 }
