Start doing status update in pseudo component.
Problem with loading all user at start.
Add global font-type.
Change host to localhost by default.

--- a/frontapi/src/globals.css
+++ b/frontapi/src/globals.css
@@ -41,6 +41,11 @@
 	--cNeon20: rgba(89, 168, 15, 0.2); 
 }
 
+* {
+	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
+}
+
+
 body
 {
 	background-color: var( --cBackground );
