added list of joined rooms

--- a/frontapi/src/components/chat/chat.css
+++ b/frontapi/src/components/chat/chat.css
@@ -69,6 +69,11 @@
 	opacity:100%;
 }
 
+#chat-joined-rooms .joined-rooms
+{
+	color: var( --cNeon );
+}
+
 #chat-users {
 	position: absolute;
 	top:1em;
