updated chat settings

--- a/frontapi/src/components/chat/chat.css
+++ b/frontapi/src/components/chat/chat.css
@@ -216,6 +216,23 @@
 	justify-content: space-between;
 }
 
+#chat-header Button#quit
+{
+	margin: 0.4em;
+	margin-right: 0;
+
+	color: rgba( 255, 0, 0, 0.7 );
+	border: 1px solid rgba( 255, 0, 0, 0.7 );
+	font-size: 1.2em;
+	font-weight: 900;
+}
+
+#chat-header Button#quit:hover
+{
+	color: var( --cBackground );
+	background-color: rgba( 255, 0, 0, 0.7 );
+}
+
 #chat-header #chat-name
 {
 	width: 100%;
